force-app/main/default/objects/Job_Onboarding_Training__c/Job_Onboarding_Training__c.object-meta.xml
<CustomObject>
    <label>Job_Onboarding_Training</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job_Onboarding_Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Onboarding_Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>