force-app/main/default/objects/Job_Onboarding_Training__c/fields/Must_Complete_Before_GoLive__c.field-meta.xml
<CustomField>
    <fullName>Must_Complete_Before_GoLive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must_Complete_Before_GoLive</label>
    <type>Checkbox</type>
</CustomField>