force-app/main/default/objects/Job_Onboarding_Training__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training_Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>